Additional Machine Data
- Improved UI by making text boxes readonly instead of disabled. Looks better and you can copy the values.
- Added display of temperatures and load (needs coretemp running on connected helpers to show values)
- Added time of last error reduction to data sent to server
- Added overall restart times to data sent to server
- Added icon
- Added installer

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ packages/
 qubic-miner-helper-server/obj/
 
 qubic-miner-helper-server/bin/
+
+installer/setup-cache/
+
+installer/setup-AnyCPU_Release-SetupFiles/
